[build-system]
requires = [
    "setuptools",
    "Cython",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "happy-clouds"
version = "2025.1.0"
authors = [
    { name = "Larry Page", email = "lawrence.page@live.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { text = "MIT License" }
dependencies = [ 
    "pillow",
    "numpy",
    "matplotlib",
    "webcolors"
]

[project.urls]
Homepage = "https://github.com/lpage30/happy-clouds"

[project.scripts]
generate = "clis.generate:main"
layout = "clis.layout:main"
show_all_text_fonts = "clis.show_all_fonts:main"
generate_weighted_text = "clis.generate_random_weighted_text_csv:main"

[tool.setuptools.packages.find]
where = ["src"]